fixed about header positioning on mobile view, still need to fix for breakpoints

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -37,7 +37,7 @@ header#main-header h2 {
 
 main {
   width: 96%;
-  margin: 0 auto 5% auto;
+  margin: 2% auto 2% auto;
   position:  relative;
   bottom: 1vmin;
 }
@@ -204,30 +204,41 @@ nav.social li {
 #about header {
   position: relative;
   height: 50vmin;
+  top: 2vmin;
   margin: 0 auto;
   text-align: center;
   z-index: 0;
 }
 
+
 #about p {
-  margin-top: 2vmin;
   line-height: 3.5vmin;
+  margin-top: 2vmin;
 }
 
-#about-img-container img {
-  max-width: 80%;
+.about-body {
+  margin-top: 4vmin;
 }
 
 #about-heading-group {
-  width: 50%;
-  float: right;
+ width: 50%;
+ display: inline-block;
+ float: right;
+ text-align: center;
+}
+
+#about-heading-group h1 {
+  margin-top: 15vmin;
 }
 
 #about-img-container {
-  margin-top: 3vmin;
   display: inline-block;
-  width: 45%;
+  width: 50%;
   float: left;
+}
+
+#about img {
+  max-width: 80%;
 }
 
 #about {
